2013-09-19  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct LUA_PATH assignment for GUI; (cf. MinGW-Bug #2052)

	* src/pkgexec.cpp (LUA_LIBEXEC_PATH): New manifest string; define it.
	(init_lua_path) <LUA_PATH>: Use it; add guimain.exe app directory.

2013-09-19  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Handle meta-package removal correctly; (cf. MinGW-Bug #2051)

	* src/pkgunst.cpp (pkgRemove) [archive == none]: Ensure the pending
	action flag is cleared; previously this was done during manifest clean
	up, and since a meta-package has no manifest, it was overlooked.

2013-09-10  Keith Marshall  <keithmarshall@users.sourceforge.net>

	mingw-get-0.6.1-mingw32-beta-20130910-1 released.

	* srcdist-doc/NEWS.in: Release notes updated.
	* All files (r0-6-1-beta-20130910-1): Tag assigned.

2013-09-10  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Fix MinGW-Bug #2026.

	* src/dmhguix.cpp (DMH_PTY_GUARDBYTES): New manifest constant.
	(dmhTypePTY::printf) [buffer full]: Use it; it defines a reserved byte
	count, at end of buffer, where expansion or scroll out is triggered;
	use memcpy() for scroll out, but avoid overlapping regions.
	(dmhTypePTY::printf) [output == '\r']: Handle it.

	* src/tarproc.cpp (create_output_stream): Improve diagnostic messages;
	discriminate between file collision and other privilege violations.
	(pkgArchiveProcessor::ExtractFile): Don't return a zero status code,
	when the output stream could not be successfully opened, so that...
	(pkgTarArchiveInstaller::ProcessDataStream): ...we may avoid writing a
	spurious manifest entry here.

2013-09-06  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update version, pre-empting subsequent release.

	* VERSION.m4 (VERSION_PATCH): Bump from zero to 1.

2013-09-04  Keith Marshall  <keithmarshall@users.sourceforge.net>

	mingw-get-0.6.0-mingw32-beta-20130904-1 released.

	* srcdist-doc/NEWS.in srcdist-doc/README.in: Release notes updated.